--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,9 @@ build:
   os: "ubuntu-22.04"
   tools:
     python: "3.8"
+  apt_packages:
+    - libcurl4-openssl-dev
+    - zlib1g-dev
  
 python:
   install:
