--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 anndata==0.9.2
 biopython==1.79    # 安装和导入的名称不同，导入是Bio
+ConfigArgParse==1.7
 h5py==3.1.0
+logomaker==0.8
 matplotlib==3.5.1
 numpy==1.19.2
 pandas==1.4.1
@@ -12,3 +14,4 @@ scipy==1.8.0
 setuptools==68.2.2
 tensorflow==2.6.0
 tqdm==4.66.1
+typing_extensions==3.7.4.3
