--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ matplotlib==3.5.1
 numpy==1.19.2
 pandas==1.4.1
 pysam==0.23.3
-rpy2==3.5.17
+# rpy2==3.5.17
 scanpy==1.9.5
 scikit-learn==1.0.2  # 安装和导入的名称不同，导入是sklearn
 scipy==1.8.0
