--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ scanpy==1.9.5
 scikit-learn==1.0.2  # 安装和导入的名称不同，导入是sklearn
 scipy==1.8.0
 setuptools==68.2.2
-tensorflow==2.6.0
+tensorflow-gpu-2.6.0 
 tqdm==4.66.1
 typing_extensions==3.7.4.3
