--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ anndata==0.9.2
 biopython==1.79    # 安装和导入的名称不同，导入是Bio
 ConfigArgParse==1.7
 h5py==3.1.0
-logomaker==0.8
+logomaker
 matplotlib==3.5.1
-numpy==1.19.2
+numpy
 pandas==1.4.1
 pysam==0.23.3
 # rpy2==3.5.17
@@ -13,5 +13,5 @@ scikit-learn==1.0.2  # 安装和导入的名称不同，导入是sklearn
 scipy==1.8.0
 setuptools==68.2.2
 tensorflow-gpu==2.6.0 
-tqdm==4.66.1
+tqdm
 typing_extensions==3.7.4.3
