--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pysam==0.23.3
 scanpy==1.9.5
 scikit-learn==1.0.2  # 安装和导入的名称不同，导入是sklearn
 scipy==1.8.0
-setuptools==68.2.2
+setuptools
 tensorflow-gpu==2.6.0 
 tqdm
 typing_extensions==3.7.4.3
